fix(common): improving spacings of components

--- a/packages/common/src/components/checkout-select-field/checkout-select-field.scss
+++ b/packages/common/src/components/checkout-select-field/checkout-select-field.scss
@@ -23,19 +23,23 @@
 }
 
 .checkout-select-field__fieldset {
+  @extend %reset;
+
   display: block;
   width: 100%;
   border: none;
 }
 
 .checkout-select-field__content {
+  @extend %reset;
+
   position: relative;
+  width: 100%;
   height: 50px;
 
   display: flex;
   align-items: center;
   justify-content: start;
-  gap: var(--plug-checkout-spacing-sm);
 
   & > checkout-typography label {
     position: absolute;
@@ -57,11 +61,13 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    right: 30px;
+    right: 8px;
   }
 }
 
 .checkout-select-field__native {
+  @extend %reset;
+
   flex: 1;
   width: 100%;
 
